@@ -132,3 +132,10 @@ isRStudio <- function()
 {
   tolower(.Platform$GUI) == "rstudio"
 }
+
+
+
+isrmote <- function()
+{
+  getOption("rmote_on", FALSE)
+}
