@@ -14,6 +14,7 @@ Release 0.4-0 (//):
   * Fix s2c() newname bug that would drop the client.
   * Fix log restarts on client connect.
   * Add kill().
+  * Add rmote support to enhances.
 
 Release 0.3-2 (4/28/2016):
   * Minor internal cleanup.
